# keenlabswsp

./: .env  CLAUDE.md  README.md  agents.md  index.html  memory.md  package-lock.json  package.json  skills.md  vite.config.ts
wsp_backtest/: .env.example  README.md  pyproject.toml  requirements.txt
wsp_backtest/config/: base.yaml  data_sources.yaml  parameter_grid.yaml  walkforward.yaml
wsp_backtest/outputs/: ablation_results.csv  artifact_bundle.json  parameter_grid_results.csv  report.md  run_metadata.json  signals.csv  summary_metrics.json  trades.csv  walkforward_results.csv
wsp_backtest/scripts/: download_free_history.py
wsp_backtest/src/: cli.py
wsp_backtest/src/analytics/: artifact_export.py  attribution.py  charts.py  forward_returns.py  metrics.py  reports.py  robustness.py  validation.py  walkforward.py
wsp_backtest/src/core/: calendar.py  config.py  logging_utils.py  types.py
wsp_backtest/src/data/: corporate_actions.py  ingestion.py  loaders.py  preprocess.py  universe.py  validators.py
wsp_backtest/src/indicators/: mansfield.py  moving_averages.py  pivots.py  regime.py  resistance.py  volume.py
wsp_backtest/src/portfolio/: execution.py  portfolio_engine.py  position_sizing.py  stops.py  trade_engine.py
wsp_backtest/src/signals/: signal_engine.py  signal_study.py  wsp_rules.py
wsp_backtest/tests/: test_artifact_export.py  test_execution.py  test_indicators.py  test_ingestion_pipeline.py  test_mansfield.py  test_metrics.py  test_resistance.py  test_signal_engine.py  test_stops.py  test_validation_pipeline.py  test_walkforward.py
(+279 files in other folders)
